# arcgis-python-api

./: .gitignore  README.md  example1_update_water_protection_areas.py  installation.txt  pyproject.toml  python_gdal_basics.py  requirements.txt  simple_arcgis_online_functions.py  tutorial_1_create_new_hosted_feature_layer_collection.py
test.gdb/: a00000001.gdbtable  a00000002.gdbtable  a00000003.gdbtable  a00000004.gdbtable  a00000005.gdbtable  a00000006.gdbtable  a00000007.gdbtable  a00000009.gdbtable  a00000009.gdbtablx  a00000009.spx
